Made it work I think I skipped part of class for this