@@ -12,6 +12,8 @@
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+        <javafx.version>21</javafx.version>
+        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -20,35 +22,47 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>21</version>
-            <classifier>win</classifier>
+            <version>${javafx.version}</version>
+
+
         </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
-            <version>21</version>
-            <classifier>win</classifier>
+            <version>${javafx.version}</version>
+
         </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
-            <version>21</version>
-            <classifier>win</classifier>
+            <version>${javafx.version}</version>
+
         </dependency>
-
     </dependencies>
-
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <version>${javafx.maven.plugin.version}</version>
                 <configuration>
                     <mainClass>org.openjfx.SuperMain</mainClass>
+
+                        <stripDebug>true</stripDebug>
+                        <compress>2</compress>
+                        <noHeaderFiles>true</noHeaderFiles>
+                        <noManPages>true</noManPages>
+                        <launcher>DzCalc</launcher>
+                        <jlinkImageName>DzCalc</jlinkImageName>
+                        <jlinkZipName>DzCalc</jlinkZipName>
+
+
+                    <options>
+                        <option>--add-modules javafx.controls</option>
+                    </options>
                 </configuration>
             </plugin>
 
@@ -73,9 +87,21 @@
                 </executions>
             </plugin>
 
+            <!-- Added Maven Compiler Plugin for modular Java -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <release>21</release>
+                </configuration>
+            </plugin>
+
+            <!-- Added Maven JLink Plugin -->
+
 
         </plugins>
     </build>
-
-
 </project>
